<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bigbo.revvversi.ActivityOptions">

    <FrameLayout
        android:layout_width="172dp"
        android:layout_height="532dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/backOptionsScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/chooseText"
            android:textColor="@color/ScoreTurn"
            android:textSize="8sp"
            app:fontFamily="@font/baloo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/wallpaper1"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/truepicture"
                android:contentDescription="@string/wallp1" />

            <ImageView
                android:id="@+id/wallpaper2"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/anothertruepicture"
                android:contentDescription="@string/wallp2" />

            <ImageView
                android:id="@+id/wallpaper3"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/withoutja"
                android:contentDescription="@string/wallp3" />
        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/backOptionsScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/back"
        android:textColor="@color/ScoreTurn"
        android:textSize="12sp"
        app:fontFamily="@font/baloo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>